--- a/.github/workflows/buildplugin.yml
+++ b/.github/workflows/buildplugin.yml
@@ -23,7 +23,11 @@ jobs:
           squashfs-tools \
           libseccomp-dev \
           pkg-config \
-          python-dev python3 python3-pip
+          python-dev \
+          python3 \
+          python3-pip \
+          python3-setuptools \
+          python3-wheel
 
     - name: Install Singularity
       env:
