--- a/.github/workflows/buildplugin.yml
+++ b/.github/workflows/buildplugin.yml
@@ -7,11 +7,6 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
 
-    - name: Set up Python 3.6
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.6
-
     - name: Set up Go 1.12
       uses: actions/setup-go@v1
       with:
@@ -28,7 +23,8 @@ jobs:
           squashfs-tools \
           libseccomp-dev \
           pkg-config \
-          python-dev \
+          python3 \
+          python3-dev \
           python3-pip \
           python3-setuptools \
           python3-wheel
@@ -49,6 +45,11 @@ jobs:
         make -C builddir && \
         sudo make -C builddir install          
 
+    - name: Install hpccm
+      run: |
+        python3 -m pip install hpccm
+        which hpccm
+
     - name: Check out code for the container build
       uses: actions/checkout@v2
 
@@ -58,10 +59,8 @@ jobs:
         SINGULARITY_RECIPE: Singularity
         OUTPUT_CONTAINER: container.sif
       run: |
-       python3 -m pip install hpccm
-       which hpccm
        if [ -f "${HPCCM_RECIPE}" ]; then
-            /usr/local/bin/hpccm --recipe ${HPCCM_RECIPE} --format singularity --singularity-version=3.2 > ${SINGULARITY_RECIPE}
+            hpccm --recipe ${HPCCM_RECIPE} --format singularity --singularity-version=3.2 > ${SINGULARITY_RECIPE}
        else
           echo "${HPCCM_RECIPE} not found."
        fi
