--- a/.github/workflows/buildplugin.yml
+++ b/.github/workflows/buildplugin.yml
@@ -7,6 +7,11 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
 
+    - name: Set up Python 3.6
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.6
+
     - name: Set up Go 1.12
       uses: actions/setup-go@v1
       with:
@@ -23,11 +28,8 @@ jobs:
           squashfs-tools \
           libseccomp-dev \
           pkg-config \
-          python3 \
           python3-dev \
           python3-pip \
-          python3-setuptools \
-          python3-wheel
 
     - name: Install Singularity
       env:
